@@ -1,6 +1,6 @@
 Package: pedometrics
 Title: Pedometric Tools and Techniques
-Version: 0.2-3
+Version: 0.2-4
 Date: 2014-10-07
 Authors@R: c(person("Alessandro Samuel-Rosa", role = c("aut", "cre"), email = "alessandrosamuelrosa@gmail.com"),
 	     person("Lucia Helena Cunha dos Anjos", role = "ths", email = "lanjos@ufrrj.br"),
